# internal/api/network/network_dns_delete.go
@@ -18,15 +18,16 @@
 // FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 // DEALINGS IN THE SOFTWARE.
 
-package client
+package network
 
 import (
-	"context"
-
-	"github.com/retr0h/osapi/internal/client/gen"
+	"github.com/labstack/echo/v4"
 )
 
-// GetNetworkDNS get the network dns get API endpoint.
-func (c *Client) GetNetworkDNS() (*gen.GetNetworkDNSResponse, error) {
-	return c.Client.GetNetworkDNSWithResponse(context.TODO())
+// DeleteNetworkDNSServerID delete the network dns by server id endpoint.
+func (n Network) DeleteNetworkDNSServerID(
+	_ echo.Context,
+	_ string,
+) error {
+	return nil
 }
